# chitai

./: .dockerignore  .gitignore  .prettierignore  README.md  justfile  main.py  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: ci.yaml  deploy.yaml
alembic/: env.py
alembic/versions/: 0d607c623452_add_illustrations_and_item_.py  2352dfc009d9_make_sessionitem_displayed_at_nullable.py  262cba6b5f6f_add_index_on_items_text_and_language.py  2c853a2f65bf_fix_incomplete_last_items_in_ended_.py  322ec5502461_add_illustration_id_to_session_items.py  4d559459f086_make_items_text_and_language_unique.py  6a23009b5b93_add_starred_to_items.py  be45a8df7026_initial_schema.py
docker/: Dockerfile  compose.yaml  entrypoint.sh  generate-cert.sh  healthcheck.py
docs/: architecture.md  data-model.md  deployment.md  frontend.md  roadmap.md  websocket-protocol.md
src/chitai/: __init__.py  image_processing.py  language.py  settings.py
src/chitai/db/: __init__.py  base.py  engine.py  models.py
src/chitai/server/: __init__.py  app.py  grace_timer.py  protocol.py  session.py
src/chitai/server/routers/: __init__.py  illustrations.py  items.py  logs.py  schemas.py  sessions.py
src/chitai/server/websocket/: __init__.py  handlers.py  protocol.py  state.py
tests/: __init__.py
tests/integration/: conftest.py  helpers.py  test_routers.py  test_server.py  test_websocket.py
tests/integration/routers/: test_illustrations.py  test_items.py  test_logs.py  test_sessions.py
tests/unit/: test_grace_timer.py  test_image_processing.py  test_language.py  test_models.py  test_placeholder.py  test_session.py
web/: debug.js  styles.css  websocket.js
web/admin/: admin.css  admin.js  index.html
web/controller/: controller.js  index.html  manifest.json
web/display/: display.js  index.html  manifest.json
