[project]
name = "chitai"
version = "0.0.0"
description = "Reading practice tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.128.0",
  "pydantic-settings>=2.12.0",
  "uvicorn>=0.40.0",
  "websockets>=16.0",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "ruff>=0.14.13", "ty>=0.0.12"]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
