[project]
name = "chitai"
version = "0.1.0"
description = "Reading practice tool"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
  "fastapi>=0.128.0",
  "pydantic-settings>=2.12.0",
  "rusyll>=0.1.1",
  "uvicorn>=0.40.0",
  "websockets>=16.0",
]

[dependency-groups]
dev = [
  "httpx>=0.28.1",
  "httpx-ws>=0.8.2",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-cov>=7.0.0",
  "ruff>=0.14.13",
  "ty>=0.0.12",
]

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
lint.select = ["ALL"]
lint.ignore = [
  "COM812", # Trailing comma missing (conflicts with formatter)
]
lint.pydocstyle.convention = "numpy"
lint.per-file-ignores."tests/**/*.py" = [
  "S101",    # Allow assert in tests
  "ANN",     # Don't require type annotations in tests
  "D",       # Don't require docstrings in tests
  "PLR2004", # Allow magic values in tests
]
lint.per-file-ignores."docker/**/*.py" = [
  "INP001", # Docker scripts are not part of a package
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["--strict-markers", "--strict-config", "-v"]

[tool.coverage.run]
source = ["src/chitai"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
